[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-stat"
version = "0.2.0"
description = "查看 Claude Code 的 token 用量与等价花费估算 —— 终端报告 + 可交互 HTML 仪表盘"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "usage", "tokens", "cli"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/dingdugan/claude.usage.stat"
Issues = "https://github.com/dingdugan/claude.usage.stat/issues"

[project.scripts]
claude-usage-stat = "claude_usage_stat.cli:main"

[tool.setuptools]
packages = ["claude_usage_stat"]
